audio page align fix for pq title

--- a/src/styles/Music.css
+++ b/src/styles/Music.css
@@ -5,7 +5,7 @@
 }
 
 .musicContainer {
-  margin: 20px;
+  margin: -10px 20px 20px;
   padding-inline-start: 32px;
   padding-inline-end: 32px;
   max-width: 1000px;
